--- a/createt.html
+++ b/createt.html
@@ -9,15 +9,53 @@
     <body>
         <div class="navbar">
             <div class="navleft">
-                <a href="index.html">Home</a>
+                <a href="index.html" class="brand">Cheminuity</a>
+                <div class="dropdown">
+                    <button class="dropbtn"> Dashboard </button>
+                    <div class="dropdown-content">
+                        <a href="progress.html"> Progress </a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"> Content </button>
+                    <div class="dropdown-content">
+                        <a href="lessons.html"> Lessons </a>
+                        <a href="quizzes.html"> Quizzes </a>
+                        <a href="videos.html"> Videos </a>
+                        <a href="resources.html"> Resources </a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"> Study Groups</button>
+                    <div class="dropdown-content">
+                        <a href="createsg.html"> Find a Study Group </a>
+                        <a href="joinsg.html"> Join a Study Group </a>
+
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Tutor </button>
+                    <div class="dropdown-content">
+                        <a href="findt.html"> Create a Tutor </a>
+                        <a href="tutorprofiles.html"> Tutor Profiles </a>
+                    </div>
+                </div>
             </div>
-            <div class="navright" id="navright"></div>
+            <div class ="navright" id="navright">
+                <a href="login.html" class="button">Login</a>
+                <a href="signin.html" class="nav-link">Sign up</a>
+            </div>
         </div>
 
         <div class="bodycontent">
             <h1>Create Tutor Session</h1>
             <p>Set up a scheduled tutor session with subject, capacity, and time.</p>
-            <div class="screenshot" style="height:140px;display:flex;align-items:center;justify-content:center">Screenshot placeholder  Create tutor session form</div>
+            <div class="screenshot" style="height:140px;display:flex;align-items:center;justify-content:center">
+                <div style="text-align:center">
+                    <strong>Example session</strong>
+                    <p style="margin-top:8px">Organic Chemistry review — Jan 12 • 6:00 PM • Zoom link</p>
+                </div>
+            </div>
         </div>
 
         <script src="scripts/main.js" defer></script>
