--- a/profile.html
+++ b/profile.html
@@ -9,17 +9,54 @@
     <body>
         <div class="navbar">
             <div class="navleft">
-                <a href="index.html">Home</a>
+                <a href="index.html" class="brand">Cheminuity</a>
+                <div class="dropdown">
+                    <button class="dropbtn"> Dashboard </button>
+                    <div class="dropdown-content">
+                        <a href="progress.html"> Progress </a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"> Content </button>
+                    <div class="dropdown-content">
+                        <a href="lessons.html"> Lessons </a>
+                        <a href="quizzes.html"> Quizzes </a>
+                        <a href="videos.html"> Videos </a>
+                        <a href="resources.html"> Resources </a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"> Study Groups</button>
+                    <div class="dropdown-content">
+                        <a href="createsg.html"> Find a Study Group </a>
+                        <a href="joinsg.html"> Join a Study Group </a>
+
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Tutor </button>
+                    <div class="dropdown-content">
+                        <a href="findt.html"> Create a Tutor </a>
+                        <a href="tutorprofiles.html"> Tutor Profiles </a>
+                    </div>
+                </div>
             </div>
-            <div class="navright" id="navright">
+            <div class ="navright" id="navright">
+                <a href="login.html" class="button">Login</a>
+                <a href="signin.html" class="nav-link">Sign up</a>
             </div>
         </div>
 
         <div class="signinbox">
             <h1>Profile</h1>
             <div id="profileArea">
-                <p>Loading...</p>
-                <div class="screenshot" style="height:120px;display:flex;align-items:center;justify-content:center;margin-top:12px">Screenshot placeholder — Profile details</div>
+                <p>Welcome back — here is a snapshot of your progress.</p>
+                <div class="screenshot" style="height:120px;display:flex;align-items:center;justify-content:center;margin-top:12px">
+                    <div style="text-align:center">
+                        <strong>Profile summary</strong>
+                        <p style="margin-top:8px">Completed lessons: <span id="profileCompleted">0</span> • Suggested next lesson: <em>Isotopes & Ions</em></p>
+                    </div>
+                </div>
             </div>
             <div style="margin-top:14px;">
                 <button id="logoutNow" class="primary-btn">Logout</button>
