--- a/quizzes.html
+++ b/quizzes.html
@@ -9,14 +9,52 @@
     <body>
         <div class="navbar">
             <div class="navleft">
-                <a href="index.html">Home</a>
+                <a href="index.html" class="brand">Cheminuity</a>
+                <div class="dropdown">
+                    <button class="dropbtn"> Dashboard </button>
+                    <div class="dropdown-content">
+                        <a href="progress.html"> Progress </a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"> Content </button>
+                    <div class="dropdown-content">
+                        <a href="lessons.html"> Lessons </a>
+                        <a href="quizzes.html"> Quizzes </a>
+                        <a href="videos.html"> Videos </a>
+                        <a href="resources.html"> Resources </a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"> Study Groups</button>
+                    <div class="dropdown-content">
+                        <a href="createsg.html"> Find a Study Group </a>
+                        <a href="joinsg.html"> Join a Study Group </a>
+
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Tutor </button>
+                    <div class="dropdown-content">
+                        <a href="findt.html"> Create a Tutor </a>
+                        <a href="tutorprofiles.html"> Tutor Profiles </a>
+                    </div>
+                </div>
             </div>
-            <div class="navright" id="navright"></div>
+            <div class ="navright" id="navright">
+                <a href="login.html" class="button">Login</a>
+                <a href="signin.html" class="nav-link">Sign up</a>
+            </div>
         </div>
 
         <div class="bodycontent">
             <h1>Quizzes</h1>
-            <div class="screenshot" style="height:180px;display:flex;align-items:center;justify-content:center">Screenshot placeholder — Quizzes list</div>
+            <div class="screenshot" style="height:180px;display:flex;align-items:center;justify-content:center">
+                <div style="text-align:center">
+                    <strong>Practice Quizzes</strong>
+                    <p style="margin-top:8px">Short quizzes per lesson to test recall and reinforce concepts — timed or untimed.</p>
+                </div>
+            </div>
             <p style="margin-top:12px">Each lesson can include a short quiz.</p>
 
             <section class="quiz" style="margin-top:18px">
