--- a/joinsg.html
+++ b/joinsg.html
@@ -9,18 +9,57 @@
     <body>
         <div class="navbar">
             <div class="navleft">
-                <a href="index.html">Home</a>
+                <a href="index.html" class="brand">Cheminuity</a>
+                <div class="dropdown">
+                    <button class="dropbtn"> Dashboard </button>
+                    <div class="dropdown-content">
+                        <a href="progress.html"> Progress </a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"> Content </button>
+                    <div class="dropdown-content">
+                        <a href="lessons.html"> Lessons </a>
+                        <a href="quizzes.html"> Quizzes </a>
+                        <a href="videos.html"> Videos </a>
+                        <a href="resources.html"> Resources </a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"> Study Groups</button>
+                    <div class="dropdown-content">
+                        <a href="createsg.html"> Find a Study Group </a>
+                        <a href="joinsg.html"> Join a Study Group </a>
+
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Tutor </button>
+                    <div class="dropdown-content">
+                        <a href="findt.html"> Create a Tutor </a>
+                        <a href="tutorprofiles.html"> Tutor Profiles </a>
+                    </div>
+                </div>
             </div>
-            <div class="navright" id="navright"></div>
+            <div class ="navright" id="navright">
+                <a href="login.html" class="button">Login</a>
+                <a href="signin.html" class="nav-link">Sign up</a>
+            </div>
         </div>
 
         <div class="bodycontent">
             <h1>Join a Study Group</h1>
             <p>Find and join study groups created by other students.</p>
-            <div class="screenshot" style="height:160px;display:flex;align-items:center;justify-content:center;margin-top:12px">Screenshot placeholder — Join group list</div>
+            <div class="screenshot" style="height:160px;display:flex;align-items:center;justify-content:center;margin-top:12px">
+                <div style="text-align:center">
+                    <strong>Join a group</strong>
+                    <p style="margin-top:8px">See upcoming meetings, join discussions, or request to attend a session.</p>
+                </div>
+            </div>
 
             <section style="margin-top:18px">
                 <h3>Available groups</h3>
+                <div style="margin-top:8px"><label><input type="checkbox" id="upcomingFilter"> Show only groups meeting within 7 days</label></div>
                 <ul id="groupList"><li>Loading groups…</li></ul>
             </section>
         </div>
