--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
         <div class="navbar">
             <div class="navleft">
-                <a href="index.html">Home</a>
+                <a href="index.html" class="brand">Cheminuity</a>
             </div>
         </div>
 
